--- a/templates/showinterface.html
+++ b/templates/showinterface.html
@@ -47,9 +47,8 @@
 
 
             {% if 'uri' in lldpinfo %}
-            <tr style="line-height:5px;"><td colspan="2">&nbsp;</td></tr>
             <tr>
-                <td colspan="2" style="background-color:black;text-align: center;"><font class="font12pxwhite">LLDP Information</font></td>
+                <td colspan="2"><font class="font13pxwhite"><center>LLDP Information</center></font></td>
             </tr>
             {% if 'system_name' in lldpinfo %}
             <tr>
