--- a/templates/sysmon.html
+++ b/templates/sysmon.html
@@ -25,6 +25,7 @@
     <div data-chart="topologyProcess" class="topologyProcess" id="topologyScheduler" value="Topology"></div>
     <div data-chart="ztpProcess" class="ztpProcess" id="ztpScheduler" value="ZTP"></div>
     <div data-chart="listenerProcess" class="listenerProcess" id="listenerScheduler" value="Listener"></div>
+    <div data-chart="telemetryProcess" class="telemetryProcess" id="telemetryScheduler" value="Telemetry"></div>
     <div id="systemTime" style="display:none;"></div>
 
 </div>
