--- a/templates/anycli.html
+++ b/templates/anycli.html
@@ -32,7 +32,7 @@
                     </select>
                     <input type="text" size="80" name="cmd" />
                     <input type="hidden" name="action" value="Send command" />
-                    <input type="submit" name="submit" value="Send Command" class="button" />
+                    <input type="submit" name="submit" value="Send Command" class="button" {% if va("anycliaccess","feature")==False %} style="opacity:0.2;pointer-events:none;" {% endif %}/>
 
                 </td>
             </tr>
