--- a/templates/topology.html
+++ b/templates/topology.html
@@ -53,7 +53,7 @@
                     </font>
                 </td>
             </tr>
-            <tr style="background-color: grey;">
+            <tr style="background-color: grey;" class="tableTitle">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td align="left" valign="top">
